# parallel-global-stiffness-assembly-research-and-implementation

./: .gitattributes  .gitignore  README.md
examples/: README.md
parallel_global_stiffness_assembly/: README.md
parallel_global_stiffness_assembly/cpu_parallel_stiffness_assembly/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_CPU.md  build_and_run.bat  build_and_test.ps1  build_simple.bat  minimal_verify_ascii.cu  quick_build.bat
parallel_global_stiffness_assembly/cpu_parallel_stiffness_assembly/apps/benchmark/: main.cpp
parallel_global_stiffness_assembly/cpu_parallel_stiffness_assembly/cmake/: CompilerFlags.cmake  CudaConfig.cmake  Dependencies.cmake
parallel_global_stiffness_assembly/cpu_parallel_stiffness_assembly/docs/: 技术报告.md  环境配置指南.md
parallel_global_stiffness_assembly/cpu_parallel_stiffness_assembly/docs/cpu/: cpu_algorithms.md  implementation_notes.md  macstudio-validation-2026-04-22.md  smoke_test_results.md
parallel_global_stiffness_assembly/cpu_parallel_stiffness_assembly/examples/: small_c3d4_gap_labels.inp  tiny_c3d4 2.inp  tiny_c3d4_with_output_sections.inp
parallel_global_stiffness_assembly/cpu_parallel_stiffness_assembly/include/assembly/: assembler_factory.h  assembler_interface.h  assembly_options.h  assembly_plan.h  element_kernels.h
parallel_global_stiffness_assembly/cpu_parallel_stiffness_assembly/include/backends/cpu/: atomic_assembler.h  coo_sort_reduce_assembler.h  cpu_assembler_base.h  graph_coloring_assembler.h  private_csr_assembler.h  row_owner_assembler.h  serial_assembler.h
parallel_global_stiffness_assembly/cpu_parallel_stiffness_assembly/include/backends/cuda/: cuda_utils.cuh  workqueue_assembler.h
parallel_global_stiffness_assembly/cpu_parallel_stiffness_assembly/include/core/: csr_matrix.h  dof_map.h  mesh.h  platform.h  soa.h  types.h
parallel_global_stiffness_assembly/cpu_parallel_stiffness_assembly/legacy_gpu/: README.md
parallel_global_stiffness_assembly/cpu_parallel_stiffness_assembly/presentation_assets/2026-04-cpu-algorithm-comparison/: cpu_algorithm_comparison_summary_slide.pptx  data_summary.md
parallel_global_stiffness_assembly/cpu_parallel_stiffness_assembly/presentation_assets/2026-04-cpu-algorithm-comparison-v2/: cpu_algorithm_comparison_summary_slide_v2.pptx  data_summary_v2.md
parallel_global_stiffness_assembly/cpu_parallel_stiffness_assembly/results/2026-04-22/csv/: cube_tet4_simplified.csv  windhub_physics_tet4.csv  windhub_physics_tet4_coo_sort_reduce.csv  windhub_simplified.csv
parallel_global_stiffness_assembly/cpu_parallel_stiffness_assembly/results/2026-04-22/figures/: summary.md
parallel_global_stiffness_assembly/cpu_parallel_stiffness_assembly/results/2026-04-22/json/: cube_tet4_simplified.json  windhub_physics_tet4.json  windhub_physics_tet4_coo_sort_reduce.json  windhub_simplified.json
parallel_global_stiffness_assembly/cpu_parallel_stiffness_assembly/results/2026-04-22/summaries/: cube_tet4_simplified.md  windhub_physics_tet4.md  windhub_physics_tet4_coo_sort_reduce.md  windhub_simplified.md
parallel_global_stiffness_assembly/cpu_parallel_stiffness_assembly/results/2026-04-28-12charts-repeat3/csv/: 01_cube_tet4_8x8x8_simplified.csv  02_cube_tet4_8x8x8_physics_tet4.csv  03_windhub_simplified.csv  04_windhub_physics_tet4.csv
parallel_global_stiffness_assembly/cpu_parallel_stiffness_assembly/results/2026-04-28-12charts-repeat3/json/: 01_cube_tet4_8x8x8_simplified.json  02_cube_tet4_8x8x8_physics_tet4.json  03_windhub_simplified.json  04_windhub_physics_tet4.json
parallel_global_stiffness_assembly/cpu_parallel_stiffness_assembly/results/2026-04-28-12charts-repeat3/presentation_charts_12_v2/: data_summary_12_charts_v2.md
parallel_global_stiffness_assembly/cpu_parallel_stiffness_assembly/results/2026-04-28-12charts-repeat3/summaries/: 01_cube_tet4_8x8x8_simplified.md  02_cube_tet4_8x8x8_physics_tet4.md  03_windhub_simplified.md  04_windhub_physics_tet4.md
parallel_global_stiffness_assembly/cpu_parallel_stiffness_assembly/results/2026-04-28-12charts-run/csv/: 01_cube_tet4_8x8x8_simplified.csv  02_cube_tet4_8x8x8_physics_tet4.csv  03_windhub_simplified.csv  04_windhub_physics_tet4.csv
parallel_global_stiffness_assembly/cpu_parallel_stiffness_assembly/results/2026-04-28-12charts-run/json/: 01_cube_tet4_8x8x8_simplified.json  02_cube_tet4_8x8x8_physics_tet4.json  03_windhub_simplified.json  04_windhub_physics_tet4.json
parallel_global_stiffness_assembly/cpu_parallel_stiffness_assembly/results/2026-04-28-12charts-run/presentation_charts_12/: data_summary_12_charts.md
parallel_global_stiffness_assembly/cpu_parallel_stiffness_assembly/results/2026-04-28-12charts-run/summaries/: 01_cube_tet4_8x8x8_simplified.md  02_cube_tet4_8x8x8_physics_tet4.md  03_windhub_simplified.md  04_windhub_physics_tet4.md
parallel_global_stiffness_assembly/cpu_parallel_stiffness_assembly/scripts/: archive_gpu_legacy.py  generate_cpu_algorithm_comparison_charts.py  generate_cpu_algorithm_comparison_charts_v2.py  generate_creative_code_workload_assets.py  generate_monthly_report_assets.py  generate_monthly_report_assets_jan_style.py  generate_monthly_report_assets_jan_style_v2.py  plot_cpu_results.py  run_cpu_experiments.py  run_cpu_smoke.py  validate_pbt.py  visualize_enhanced.py  visualize_results.py  workload_stats.py
parallel_global_stiffness_assembly/cpu_parallel_stiffness_assembly/src/assembly/: assembler_factory.cpp  assembly_options.cpp  assembly_plan.cpp  element_kernels.cpp
parallel_global_stiffness_assembly/cpu_parallel_stiffness_assembly/src/core/: csr_matrix.cpp  dof_map.cpp  mesh.cpp  platform.cpp
parallel_global_stiffness_assembly/cpu_parallel_stiffness_assembly/tests/correctness/: verify_inp_parser.cpp  verify_results.cpp
parallel_global_stiffness_assembly/cpu_parallel_stiffness_assembly/tests/unit/: test_assemblers.cpp  test_csr.cpp  test_mesh.cpp
parallel_global_stiffness_assembly/gpu_parallel_stiffness_assembly/implementation/gpu_parallel_stiffness_assembly/: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  build_and_benchmark.bat
(+77 files in other folders)
